# Spotify_pipeline_EC2_S3_Apache

./: .gitignore  README.md  pyproject.toml  spotify_dag.py  spotify_etl.py
spotify_data_pipeline/: spotify_dag.py
